# password_manager

./: .gitignore
password_manager/: app.json  package.json
password_manager/src/app/: _layout.jsx
password_manager/src/app/(app)/: _layout.jsx  index.jsx
password_manager/src/app/(auth)/: _layout.jsx  login.jsx  register.jsx
password_manager/src/store/: authStore.js
server/: pyproject.toml
server/api/v1/: router.py
server/apps/password_manager/: admin.py  api.py  apps.py  models.py  schemas.py
server/apps/password_manager/migrations/: 0001_initial.py
server/apps/users/: admin.py  api.py  auth.py  csrf.py  models.py  schemas.py  utils.py
server/apps/users/migrations/: 0001_initial.py
server/core/: admin.py  urls.py
server/core/settings/: base.py  development.py
