[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cryptography>=48.0.0",
    "django-allauth[mfa]>=65.18.0",
    "django-cors-headers>=4.9.0",
    "django-ninja>=1.6.2",
    "django-unfold>=0.97.0",
    "psycopg[binary]>=3.3.4",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "requests>=2.34.2",
    "uvicorn>=0.49.0",
]
